--- a/hyprland_gentoo/hypr/hyprland.conf
+++ b/hyprland_gentoo/hypr/hyprland.conf
@@ -10,11 +10,13 @@ monitor=,preferred,auto,1
 # Execute your favorite apps at launch
 exec-once = waybar
 exec-once = fcitx5 --replace -d
-exec-once = dunst
+###通知管理器
+exec-once = dunst -conf ~/.config/dunst/dunstrc
+###剪贴板
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 ### 壁纸
-#exec-once = ~/.config/hypr/scripts/wallpaper.sh 
+exec-once = ~/.config/hypr/scripts/wallpaper.sh 
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
