--- a/hyprland_gentoo/hypr/configure/keybindings.conf
+++ b/hyprland_gentoo/hypr/configure/keybindings.conf
@@ -1,13 +1,16 @@
+$HyprTool=~/.config/hypr/scripts
+
 $term = alacritty          # 终端
 $browser = brave-bin	   # 浏览器
 $file = dolphin            # 文件管理器
 $code_editor = neovide     # 代码编辑器
 $menu = rofi -show drun
 
-
+bind = SUPER, L, exec, gtklock  -b .config/hypr/wallpaper/wallhaven-3z2j2d_3840x2400.png   -t %R:%S
 bind = SUPER, return, exec, $term                                   # 打开终端
 bind = SUPER, space, exec, [float;size 1200 800;center] $term       # 打开一个浮动终端
-bind = SUPER, B, exec, $browser                                     # 打开浏览器
+bind = SUPER, B, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy # 打开剪切板
+#bind = SUPER, B, exec, $browser                                     # 打开浏览器
 bind = SUPER, C, exec, [float;size 1500 900;center] $code_editor    # 打开代码编辑器
 bind = SUPER, Q, killactive,                                        # 关闭聚焦的窗口
 bind = SUPER SHIFT, B, exec, pkill waybar || waybar                 # 开/关状态栏
@@ -22,9 +25,20 @@ bind = SUPER, backspace, exec, ~/.config/hypr/scripts/logoutlaunch.sh 1
 bind = SUPER, P, pseudo,                                                     # dwindle
 bind = SUPER, J, togglesplit,                                                # dwindle
 
+ # 亮度调节
+bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
+bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
+
+
+# Bind fn keywords
+binde =, XF86AudioRaiseVolume, exec, $HyprTool/volumecontrol.sh --inc
+binde =, XF86AudioLowerVolume, exec, $HyprTool/volumecontrol.sh --dec
+binde =, XF86AudioMute, exec, $HyprTool/volumecontrol.sh --toggle
+
 bind = , print, exec, ~/.config/hypr/scripts/screenshot.sh s                 # 选择一个区域截图，或者鼠标点击截取点击的窗口
 bind = SUPER, print, exec, ~/.config/hypr/scripts/screenshot.sh m            # 截取当前聚焦的显示器的屏幕
 bind = SUPER ALT,print, exec, ~/.config/hypr/scripts/screenshot.sh p         # 截取所有显示器屏幕
+bind = SUPER SHIFT, S, exec, grim -g "$(slurp -d)" - | tee "/home/aiyi/Pictures/screenshot/$( date +'%Y%m%d-%H%M%S').png" | cliphist store
 
 bind = SUPER, V, exec, pkill -x rofi || ~/.config/hypr/scripts/cliphist.sh c # 打开剪切板选择要复制的内容
 bind = SUPER, F12, exec, ~/.config/hypr/scripts/switch_wallpaper.sh          # 切换壁纸
@@ -37,15 +51,6 @@ bind = SUPER_SHIFT, F, fullscreen, 0       # 最大化窗口不保留状态栏
 bind = SUPER, tab, exec, hyprctl dispatch cyclenext next floating && hyprctl dispatch alterzorder top       # 聚焦下一个浮动窗口
 bind = SUPER_SHIFT, tab, exec, hyprctl dispatch cyclenext prev floating && hyprctl dispatch alterzorder top # 聚焦上一个浮动窗口
 
-bind  = , XF86AudioMute, exec, ~/.config/hypr/scripts/volumecontrol.sh -o m        # 切换静音
-bind  = , XF86AudioMicMute, exec, ~/.config/hypr/scripts/volumecontrol.sh -i m     # 麦克风静音
-binde = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volumecontrol.sh -o d # 音量减小
-binde = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volumecontrol.sh -o i # 音量增大
-
-bind  = , XF86AudioPlay, exec, playerctl play-pause  # 播放
-bind  = , XF86AudioPause, exec, playerctl play-pause # 暂停
-bind  = , XF86AudioNext, exec, playerctl next        # 下一个
-bind  = , XF86AudioPrev, exec, playerctl previous    # 上一个
 
 # 切换工作区
 bind = SUPER, 1, workspace, 1
